--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,7 +24,13 @@ phases:
       - echo Pushing the Docker image...
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo Writing image definitions file...
-      - printf '[{"name":"akash-container","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imageDefinitions.json
+      - |
+        echo '[
+          {
+            "name": "akash-container",
+            "imageUri": "'${REPOSITORY_URI}':'${IMAGE_TAG}'"
+          }
+        ]' > imageDefinitions.json
       - cat imageDefinitions.json
 
 artifacts:
